FullSb1-27-apr-15/src/objects/Fees__c.object
<CustomObject>
    <fields>
        <fullName>NYC_Housing_Twin_Mod_D__c</fullName>
        <description>NY - Housing - Twin - Mod D</description>
        <label>NYC - Housing - Twin - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Twin_Mod_E__c</fullName>
        <description>NY - Housing - Twin - Mod E</description>
        <label>NYC - Housing - Twin - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Double_Room_Mod_D__c</fullName>
        <label>New York - Double Room - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Double_Room_Mod_E__c</fullName>
        <label>New York - Double Room - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Premium_Single_Mod_D__c</fullName>
        <label>New York - Premium Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Premium_Single_Mod_E__c</fullName>
        <label>New York - Premium Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Single_Mod_D__c</fullName>
        <label>New York - Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Single_Mod_E__c</fullName>
        <label>New York - Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penthouse_Luxury_Studio_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penthouse_Luxury_Studio_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penthouse_Luxury_Studio_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Penthouse Luxury Studio P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_3_months__c</fullName>
        <label>Pre-Master Program (3 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_6_mos__c</fullName>
        <label>Pre-Master Program (6 mos)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_9_months__c</fullName>
        <label>Pre-Master Program (9 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_P1__c</fullName>
        <description>SFO Housing
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Double P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_P2__c</fullName>
        <description>SFO Housing
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Premium Double P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_P3__c</fullName>
        <description>SFO Housing
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Premium Double P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_Summer_Term_12__c</fullName>
        <description>SFO Housing</description>
        <label>Premium Double Room - Summer Term 1&amp;2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_Summer_Term_1__c</fullName>
        <description>SFO Housing</description>
        <label>Premium Double Room - Summer Term 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Double_Room_Summer_Term_2__c</fullName>
        <description>SFO Housing</description>
        <label>Premium Double Room - Summer Term 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_Room_SFO_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single SFO P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_Room_SFO_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Premium Single SFO P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_Room_SFO_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Premium Single SFO P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_UK_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Single UK P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_UK_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Premium Single UK P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Single_UK_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Premium Single UK P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Twin_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Premium Twin P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Twin_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Premium Twin P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Twin_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Premium Twin P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Complete Fee information stored in this object for each Academic year and for each Program</description>
        <inlineHelpText>Complete Fee information for each Academic year and for each Program</inlineHelpText>
        <label>Program Name</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Management_Specialization__c</fullName>
        <inlineHelpText>Project Management Specialization(9 Credits)</inlineHelpText>
        <label>Project Management Specialization</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Specialization_with_thesis__c</fullName>
        <label>Project Specialization - with thesis</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rotation_Deposit__c</fullName>
        <label>Rotation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_H__c</fullName>
        <description>SHA - Housing - Suite - Mod D</description>
        <label>SHA - Housing - Suite - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Dependent_E__c</fullName>
        <description>SHA - Housing - Dependent - Mod E</description>
        <label>SHA - Housing - Dependent - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Dependent__c</fullName>
        <description>SHA - Housing - Dependent - Mod E</description>
        <label>SHA - Housing - Dependent - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Suite_Mod_E__c</fullName>
        <description>SHA - Housing - Suite - Mod D</description>
        <label>SHA - Housing - Suite - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_A_Mod_D__c</fullName>
        <description>SHA - Housing - Type A - Mod D</description>
        <label>SHA - Housing - Type A - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_A_Mod_E__c</fullName>
        <description>SHA - Housing - Type A - Mod E</description>
        <label>SHA - Housing - Type A - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_B_Mod_D__c</fullName>
        <description>SHA - Housing - Type B - Mod D</description>
        <label>SHA - Housing - Type B - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_B_Mod_E__c</fullName>
        <description>SHA - Housing - Type B - Mod E</description>
        <label>SHA - Housing - Type B - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_C1_Mod_D__c</fullName>
        <description>SHA - Housing - Type C1 - Mod D</description>
        <label>SHA - Housing - Type C1 - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_C1_Mod_E__c</fullName>
        <description>SHA - Housing - Type C1 - Mod E</description>
        <label>SHA - Housing - Type C1 - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_C_Mod_D__c</fullName>
        <description>SHA - Housing - Type C - Mod D</description>
        <label>SHA - Housing - Type C - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_C_Mod_E__c</fullName>
        <description>SHA - Housing - Type C - Mod E</description>
        <label>SHA - Housing - Type C - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_D1_Mod_D__c</fullName>
        <description>SHA - Housing - Type D1 - Mod D</description>
        <label>SHA - Housing - Type D1 - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_D1_Mod_E__c</fullName>
        <description>SHA - Housing - Type D1 - Mod E</description>
        <label>SHA - Housing - Type D1 - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_D_Mod_D__c</fullName>
        <description>SHA - Housing - Type D - Mod D</description>
        <label>SHA - Housing - Type D - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_D_Mod_E__c</fullName>
        <description>SHA - Housing - Type D - Mod E</description>
        <label>SHA - Housing - Type D - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_E_Mod_D__c</fullName>
        <description>SHA - Housing - Type E - Mod D</description>
        <label>SHA - Housing - Type E - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_E_Mod_E__c</fullName>
        <description>SHA - Housing - Type E - Mod E</description>
        <label>SHA - Housing - Type E - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_F_Mod_D__c</fullName>
        <description>SHA - Housing - Type F - Mod D</description>
        <label>SHA - Housing - Type F - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Housing_Type_F_Mod_E__c</fullName>
        <description>SHA - Housing - Type F - Mod E</description>
        <label>SHA - Housing - Type F - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHA_Visa_JW_202__c</fullName>
        <description>SHA - Visa - JW-202</description>
        <label>SHA - Visa - JW-202</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Premium_Double_Mod_D__c</fullName>
        <label>San Francisco - Premium Double - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Premium_Double_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>San Francisco - Premium Double - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Premium_Single_Mod_D__c</fullName>
        <label>San Francisco - Premium Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Premium_Single_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>San Francisco - Premium Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Regular_Double_Mod_D__c</fullName>
        <label>San Francisco - Regular Double - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Francisco_Regular_Double_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>San Francisco - Regular Double - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Accommodation_Family__c</fullName>
        <label>Shanghai Accommodation Family</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Deluxe_Single_Room_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Deluxe Single Room - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Deluxe_Single_Room_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Deluxe Single Room - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Double_Room_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Double Room - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Double_Room_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Double Room - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Single_Room_8_Months_Free__c</fullName>
        <label>Shanghai - Single Room - 8 Months - Free</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Standard_Single_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Standard Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Standard_Single_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Standard Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Suite_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Suite - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_Suite_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - Suite - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_X2_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - X2 - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shanghai_X2_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Shanghai - X2 - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shared_Twin_Annual__c</fullName>
        <label>Shared Twin (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Annual__c</fullName>
        <label>Single (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_P1__c</fullName>
        <description>Hult Tower &amp; Studios
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Single P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_P3__c</fullName>
        <description>Hult Tower &amp; Studios
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Hult Tower &amp; Studios,Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Single P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solo_P2__c</fullName>
        <description>Hult Tower &amp; Studios
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Hult Tower &amp; Studios ,Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Single P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialization_in_MDM_or_MFIN__c</fullName>
        <label>Specialization in MDM or MFIN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_P1__c</fullName>
        <description>SFO Housing
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Standard Double P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_P2__c</fullName>
        <description>SFO Housing
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Standard Double P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_P3__c</fullName>
        <description>Housing SFO
This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Standard Double P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_Summer_Term_1_2__c</fullName>
        <description>SFO Housing</description>
        <label>Standard Double Room - Summer Term 1&amp;2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_Summer_Term_1__c</fullName>
        <description>SFO Housing</description>
        <label>Standard Double Room - Summer Term 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Double_Room_Summer_Term_2__c</fullName>
        <description>SFO Housing</description>
        <label>Standard Double Room - Summer Term 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_Resources_Activities__c</fullName>
        <label>Student Resources &amp; Activities</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Studio P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Studio P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_Vista_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio Vista P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_Vista_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Studio Vista P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Studio_Vista_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Studio Vista P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toolbox_Case_Study_Pack__c</fullName>
        <label>Toolbox &amp; Case Study Pack</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Program_Fee__c</fullName>
        <description>Total Program Fees for this current program and year</description>
        <inlineHelpText>Total Program Fees for this current program and year</inlineHelpText>
        <label>Total Program Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twin_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Twin P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twin_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Twin P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twin_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Twin P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UG_Analyst_Certificate__c</fullName>
        <label>UG Analyst Certificate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uniqueness_ID__c</fullName>
        <label>Uniqueness ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visa_Single_Express_33_Countries__c</fullName>
        <label>Visa - Single Express 33 Countries</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Single_Express_Other_Countries__c</fullName>
        <label>Visa - Single Express Other Countries</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Single_Standard_All_Countries__c</fullName>
        <label>Visa - Single Standard All Countries</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Standard_Single_Spouse_and_2_Chi__c</fullName>
        <label>Visa - Standard Single Spouse &amp; 2 Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>